# archimono

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: Makefile  api.rst  conf.py  index.rst
scripts/: benchmark.py  certify.py  export_structures.py  verify.py
src/archimono/: __init__.py  benchmarking.py  certification.py  export.py  viz.py
src/archimono/assignment/: __init__.py
src/archimono/tilings/: __init__.py  base.py  registry.py
tests/: conftest.py
tests/contract/: conftest.py
tests/contract/enumeration/: test_enumeration_ground_truth.py
tests/contract/error_handling/: test_edge_cases.py
tests/contract/geometry/: test_tiling_properties.py
tests/contract/heuristic_quality/: test_heuristic_seeded.py
tests/contract/scripts/: test_benchmark_smoke.py  test_certify_provenance.py  test_certify_smoke.py  test_export_structures_smoke.py
tests/contract/solver_correctness/: test_solver_reference_cases.py
tests/fast/: conftest.py
tests/fast/benchmarking/: test_solve_run_db.py  test_sweep_config.py
tests/fast/certification/: test_case_json_name.py  test_certification_record_json.py  test_format_supercell.py  test_make_skip_record.py  test_resolve_target_sizes.py  test_resolve_tilings.py
tests/fast/enumeration/: test_backend_selector.py  test_enumerator_smoke.py  test_matrix_supercell.py
tests/fast/error_handling/: test_input_rejection.py
tests/fast/export/: test_export.py
tests/fast/geometry/: test_diagonal_matrix_pos.py  test_tiling_graph_basics.py
tests/fast/heuristic_quality/: test_heuristic_smoke.py
tests/fast/scripts/: __init__.py  (+3 more)
tests/heavy/: conftest.py
(+42 files in other folders)
